tests/valid/index.d.ts
export declare function validRGBValues(): void;
export declare function validRGBAValues(): void;
