tests/invalid/index.d.ts
export declare function dataTypes(): void;
export declare function invalidValues(): void;
